Working on matrix calculator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,6 +122,13 @@
             android:theme="@style/Theme.MathMaster"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".MatrixResultActivity"
+            android:exported="true"
+            android:label="Math Master"
+            android:theme="@style/Theme.MathMaster"
+            android:screenOrientation="portrait">
+        </activity>
 
         <!-- Statistics -->
         <activity
