--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
             android:theme="@style/Theme.MathMaster"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".MainMenuActivity"
+            android:exported="true"
+            android:label="Math Master"
+            android:theme="@style/Theme.MathMaster"
+            android:screenOrientation="portrait">
+        </activity>
 
         <!-- Learn -->
         <activity
@@ -108,6 +115,15 @@
         <!-- Tools -->
         <activity
             android:name=".ToolsActivity"
+            android:exported="true"
+            android:label="Math Master"
+            android:theme="@style/Theme.MathMaster"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <!-- Advance calculator -->
+        <activity
+            android:name=".AdvancedCalculatorActivity"
             android:exported="true"
             android:label="Math Master"
             android:theme="@style/Theme.MathMaster"
